[gd_scene load_steps=6 format=3 uid="uid://c113iciuq54id"]

[ext_resource type="Script" path="res://Scenes/Ui/menu.gd" id="1_pqk0r"]
[ext_resource type="Texture2D" uid="uid://cy745kg0w7kd2" path="res://Branding/mainBackground.png" id="2_6p2pm"]
[ext_resource type="Theme" uid="uid://c6qj4gpqpe15" path="res://Themes/mainTextTheme.tres" id="2_cm52q"]
[ext_resource type="Theme" uid="uid://bxc0tsxn6mdmk" path="res://Themes/menuTheme.tres" id="5_fdp1x"]
[ext_resource type="AudioStream" uid="uid://c3ai3ugmg4wg0" path="res://Audio/mouse-click-153941.mp3" id="5_w52rp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqk0r")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundWalpaper" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -60.0
offset_right = 146.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6p2pm")
expand_mode = 3

[node name="BackgroundBlur" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.729412, 0.439216, 0.309804, 0.741176)

[node name="mainMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 436.0
grow_vertical = 2

[node name="additionalDarkness" type="Panel" parent="mainMenu"]
modulate = Color(1, 1, 1, 0.384314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mainMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 38.0
offset_top = -134.0
offset_right = -32.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="mainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "Play"

[node name="Options" type="Button" parent="mainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "Options"

[node name="Quit" type="Button" parent="mainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "Quit"

[node name="optionsMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 436.0
grow_vertical = 2

[node name="additionalDarkness" type="Panel" parent="optionsMenu"]
modulate = Color(1, 1, 1, 0.384314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="optionsMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 38.0
offset_top = -134.0
offset_right = -32.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Back" type="Button" parent="optionsMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "Back"

[node name="playMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="slots" type="HBoxContainer" parent="playMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 162.0
offset_right = -20.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SaveSlot1" type="Panel" parent="playMenu/slots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="playMenu/slots/SaveSlot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="playMenu/slots/SaveSlot1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("2_cm52q")
text = "Slot one"

[node name="Load1" type="Button" parent="playMenu/slots/SaveSlot1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "load
"

[node name="startNew1" type="Button" parent="playMenu/slots/SaveSlot1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "new world
"

[node name="DeleteWorld1" type="Button" parent="playMenu/slots/SaveSlot1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_fdp1x")
text = "delete world"

[node name="SaveSlot2" type="Panel" parent="playMenu/slots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="playMenu/slots/SaveSlot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="playMenu/slots/SaveSlot2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("2_cm52q")
text = "Slot Two"

[node name="Load2" type="Button" parent="playMenu/slots/SaveSlot2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "load
"

[node name="startNew2" type="Button" parent="playMenu/slots/SaveSlot2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "new world
"

[node name="DeleteWorld2" type="Button" parent="playMenu/slots/SaveSlot2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_fdp1x")
text = "delete world"

[node name="SaveSlot3" type="Panel" parent="playMenu/slots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="playMenu/slots/SaveSlot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="playMenu/slots/SaveSlot3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource("2_cm52q")
text = "Slot Three"

[node name="Load3" type="Button" parent="playMenu/slots/SaveSlot3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "Load"

[node name="startNew3" type="Button" parent="playMenu/slots/SaveSlot3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
theme = ExtResource("5_fdp1x")
text = "new world
"

[node name="DeleteWorld3" type="Button" parent="playMenu/slots/SaveSlot3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_fdp1x")
text = "delete world"

[node name="top" type="VBoxContainer" parent="playMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 163.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="playMenu/top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("2_cm52q")
text = "Chose Saved slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom" type="HBoxContainer" parent="playMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 200
alignment = 1

[node name="Previous" type="Button" parent="playMenu/bottom"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "  <-  "

[node name="playBack" type="Button" parent="playMenu/bottom"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "     Back     "

[node name="Next" type="Button" parent="playMenu/bottom"]
layout_mode = 2
theme = ExtResource("2_cm52q")
text = "  ->  "

[node name="ClickSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_w52rp")
volume_db = 10.0
pitch_scale = 0.5

[connection signal="pressed" from="mainMenu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="mainMenu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="mainMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="optionsMenu/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot1/VBoxContainer/Load1" to="." method="_on_load_1_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot1/VBoxContainer/startNew1" to="." method="_on_start_new_1_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot1/VBoxContainer/DeleteWorld1" to="." method="_on_delete_world_1_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot2/VBoxContainer/Load2" to="." method="_on_load_2_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot2/VBoxContainer/startNew2" to="." method="_on_start_new_2_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot2/VBoxContainer/DeleteWorld2" to="." method="_on_delete_world_2_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot3/VBoxContainer/Load3" to="." method="_on_load_3_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot3/VBoxContainer/startNew3" to="." method="_on_start_new_3_pressed"]
[connection signal="pressed" from="playMenu/slots/SaveSlot3/VBoxContainer/DeleteWorld3" to="." method="_on_delete_world_3_pressed"]
[connection signal="pressed" from="playMenu/bottom/playBack" to="." method="_on_play_back_pressed"]
